<resources>
    <string name="app_name">meal-tracker</string>
    <string name="start_button_description">Today</string>
    <string name="start_screen_text">What\'s next?</string>
    <string name="create_shop_list">Shopping list</string>
    <string name="plan_your_day">Plan your day</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_day_summary">Your day summary</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_shopping_list">Shopping List</string>
    <string name="nutrition_facts"><b>Nutrition Facts</b></string>
    <string name="title_activity_add_meal">Add new meal</string>
    <string name="meal_name">Your meal name</string>
    <string name="select_time">Select your meal time</string>
    <string name="add_food">Add food</string>
    <string name="meal_hour">07:00 PM</string>
    <string name="meal_date">Today</string>
    <string name="title_activity_search_food">Search food</string>
    <string name="title_activity_full_meal_details">Food details</string>
    <string name="minus">\t\t-\t\t</string>
    <string name="plus">+\t\t</string>
    <string name="equal">=\t\t</string>
    <string name="goalCalories">2 400\t\t</string>
    <string name="remainingCalories">2 400</string>
    <string name="consumedCalories">\t\t0\t\t</string>
    <string name="goalCaloriesText">Goal</string>
    <string name="consumedCaloriesText">\t\tConsumed</string>
    <string name="remainingCaloriesText">Remaining</string>
    <string name="action_edit">Edit</string>
    <string name="edit_meal_name_text">Your meal name</string>
    <string name="edit_food_recipe">Your recipe</string>
    <string name="empty_food_list">There are no upcoming meals :( Let\'s plan something good to eat!</string>
</resources>
