<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="mini.pl.meal_tracker.fragments.DayQuickSummary">

    <TextView
        android:id="@+id/calories_remaining_txt_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@android:color/white"
        android:fontFamily="@font/abhaya_libre"
        android:gravity="center"
        android:paddingBottom="5dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingStart="20dp"
        android:paddingTop="5dp"
        android:text="Calories Remaining"
        android:elevation="5dp"
        android:textColor="@android:color/darker_gray"
        android:textSize="25sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="5dp"
        android:layout_marginHorizontal="30dp"
        android:layout_marginVertical="20dp">

        <LinearLayout
            android:id="@+id/goalCaloriesViewLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/goalCaloriesView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/goalCalories"
                android:textAlignment="center"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="25sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:fontFamily="@font/abhaya_libre"
                android:text="@string/goalCaloriesText"
                android:textSize="15sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/minusId"
            android:layout_width="wrap_content"
            android:textAlignment="center"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/goalCaloriesViewLayout"
            android:layout_toRightOf="@+id/goalCaloriesViewLayout"
            android:text="@string/minus"
            android:textSize="25sp" />

        <LinearLayout
            android:id="@+id/consumedIdLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/minusId"
            android:layout_toRightOf="@+id/minusId"
            android:orientation="vertical">

            <TextView
                android:id="@+id/consumedId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/consumedCalories"
                android:textAlignment="center"
                android:textColor="@android:color/holo_blue_dark"
                android:textSize="25sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/consumedCaloriesText"
                android:fontFamily="@font/abhaya_libre"
                android:textSize="15sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/equalId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_toEndOf="@+id/consumedIdLayout"
            android:layout_toLeftOf="@+id/remainingIdLayout"
            android:layout_toRightOf="@+id/consumedIdLayout"
            android:layout_toStartOf="@+id/remainingIdLayout"
            android:text="@string/equal"
            android:textSize="25sp" />

        <LinearLayout
            android:id="@+id/remainingIdLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:orientation="vertical">

            <TextView
                android:id="@+id/remainingId"
                android:textAlignment="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/remainingCalories"
                android:textColor="@android:color/holo_green_light"
                android:textSize="25sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/remainingCaloriesText"
                android:fontFamily="@font/abhaya_libre"
                android:textSize="15sp" />
        </LinearLayout>


    </RelativeLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@android:color/white"
        android:fontFamily="@font/abhaya_libre"
        android:gravity="center"
        android:paddingBottom="5dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingStart="20dp"
        android:paddingTop="5dp"
        android:text="What's next?"
        android:elevation="5dp"
        android:textColor="@android:color/darker_gray"
        android:textSize="25sp" />

    <include layout="@layout/meal_summary_layout" android:id="@+id/meal_summary_id_placeholder"/>

</LinearLayout>
