<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="mini.pl.meal_tracker.activities.AddMealActivity"
    android:orientation="vertical"
    tools:showIn="@layout/activity_add_meal">

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/mealNameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/space_default"
        android:hint="@string/meal_name"
        app:met_floatingLabel="highlight"
        android:textSize="25sp"
        android:fontFamily="@font/abhaya_libre"
        app:met_floatingLabelText="@string/meal_name"
        app:met_primaryColor="@color/colorAccent" />

    <LinearLayout
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/meal_hour_button"
            android:layout_width="0px"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:textSize="25sp"
            style="@style/Widget.AppCompat.Button.Colored"
            android:text="@string/meal_hour"
            android:fontFamily="@font/abhaya_libre"
            />
        <Button
            android:id="@+id/meal_date_button"
            android:layout_width="0px"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/meal_date"
            android:fontFamily="@font/abhaya_libre"
            android:textSize="25sp"
            style="@style/Widget.AppCompat.Button.Colored"
            />
    </LinearLayout>



    <android.support.v7.widget.RecyclerView
        android:layout_margin="@dimen/space_default"
        android:id="@+id/eneteredMeal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/add_food"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.AppCompat.Button.Colored"
        android:text="@string/add_food"
        android:textSize="25sp"
        android:fontFamily="@font/abhaya_libre_semibold"
        />

</LinearLayout>
