<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="mini.pl.meal_tracker.activities.MainActivity">

    <!--<android.support.design.widget.AppBarLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:theme="@style/AppTheme.AppBarOverlay">-->

    <!--</android.support.design.widget.AppBarLayout>-->


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:elevation="5dp"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:background="@drawable/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <android.support.design.widget.VisibilityAwareImageButton
                android:id="@+id/left"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:background="@drawable/left" />

            <Button
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:id="@+id/currentDayId"
                android:background="@drawable/back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_toEndOf="@+id/left"
                android:layout_toRightOf="@+id/left"
                android:layout_toStartOf="@+id/right"
                android:layout_toLeftOf="@+id/right"
                android:fontFamily="@font/abhaya_libre"
                android:textSize="16sp"
                android:text="@string/start_button_description" />

            <android.support.design.widget.VisibilityAwareImageButton
                android:id="@+id/right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="@drawable/right" />
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/fragmentId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/planYourDay"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:fontFamily="@font/abhaya_libre"
                android:layout_weight="1"
                android:textSize="20sp"
                android:text="@string/plan_your_day" />

            <Button
                android:id="@+id/shopList"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:textSize="20sp"
                android:fontFamily="@font/abhaya_libre"
                android:text="@string/create_shop_list"
                android:layout_weight="1" />
        </LinearLayout>


    </LinearLayout>
    <android.support.design.widget.FloatingActionButton
        android:id="@+id/startViewFab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="@dimen/fab_margin"
        app:srcCompat="@drawable/add" />
</android.support.design.widget.CoordinatorLayout>
